[metadata]
name = Smarty Hooks
description = Runs hooks for Smarty projects
version = 0.1.0
author = Tom Freudenmann
author_email = 75214791+Super-T02@users.noreply.github.com
license = MIT

[options]
packages = find:

[options.entry_points]
console_scripts =
    my_ament_uncrustify = ament_uncrustify.main:main