[metadata]
name = ament_uncrustify
description = Runs ament_uncrustify on ROS2 packages
version = 0.1.0
author = Tom Freudenmann
author_email = 75214791+Super-T02@users.noreply.github.com
license = MIT

[options]
packages = find:

[options.entry_points]
console_scripts =
    ament_uncrustify = ament_uncrustify.main:main